option('video',      type: 'boolean', value: 'true')
option('spellcheck', type: 'boolean', value: 'true')
option('examples',   type: 'boolean', value: 'false')
option('appdata',    type: 'boolean', value: 'true')
option('x11',        type: 'boolean', value: 'true')
option('localtextdomain', type: 'boolean', value: 'false', description: 'Use local translation files rather than those installed in `prefix`' )
option('consumer_key_base64', type: 'string', description: 'base64 encoding of the Twitter consumer key')
option('consumer_secret_base64', type: 'string', description: 'base64 encoding of the Twitter consumer secret')