i18n = import('i18n')

i18n.gettext('cawbird', args: [
    '--keyword=_',
    '--keyword=N_',
    '--flag=N_:1:pass-c-format',
    '--from-code=UTF-8',
    '--add-comments=TRANSLATORS',
    '--no-location',
    '--msgid-bugs-address=https://github.com/ibboard/cawbird/issues/new',
    '--copyright-holder=2013-2018 Timm Bäder, 2018-2020 IBBoard'
])
